Corrected date picker z-index in Chrome
See issue #24

--- a/tpl_ta2ta/styles/less/template.less
+++ b/tpl_ta2ta/styles/less/template.less
@@ -65,6 +65,11 @@
   .alert-dismissable;
 }
 
+// datepicker fix
+.datepicker{
+  z-index: 1000000000 !important;
+}
+
 // Correct non-scrollable bootstrap modals
 .modal-body{
     overflow-y: auto;
